In Progress - Government 360 - Real Estate Tax

--- a/displaytabs/tabs/GovernmentUI/PlumbingPermitProfileMain.html
+++ b/displaytabs/tabs/GovernmentUI/PlumbingPermitProfileMain.html
@@ -28,7 +28,7 @@
         <label class="control-label">Issuer</label>
         <div class="input-group" style="display: block;">
             <input rowIndex="1" type="text" style="width: 100%;" class="form-control pull-right autocomplete displayEdit" name="issuerCode" placeholder="Issuer" module="RealEstatePlumbingPermitUI" mainmodule="RealEstatePlumbingPermitUI" autoname="issuerCode" helptitle="issuerCode" disabled="">
-            <input rowIndex="1" class="form-control editRealEstatePlumbingPermit HiddenAutoComplete" name="issuerCode" type="hidden" module="RealEstatePlumbingPermitUI" mainmodule="RealEstatePlumbingPermitUI" autonamefield="issuerCode" value="">
+            <input rowIndex="1" class="form-control editRealEstatePlumbingPermit HiddenAutoComplete" name="issuerCode" type="hidden" module="RealEstatePlumbingPermitUI" mainmodule="RealEstatePlumbingPermitUI" autoNameField="issuerCode" value="">
             <div class="autocomplete-items" module="RealEstatePlumbingPermitUI" mainmodule="RealEstatePlumbingPermitUI" autoname="issuerCode">
             </div>
         </div>
