--- a/displaytabs/tabs/GovernmentUI/RealEstateTransferRecords.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateTransferRecords.html
@@ -32,7 +32,7 @@
                         <label class="control-label">Issuer</label>
                         <div class="input-group">
                             <input type="text" class="form-control autocomplete displayEdit RealEstateUI_NewTransfer" name="RealEstateUI_NewTransferIssuerCode" placeholder="Issuer" module="RealEstateUI" mainmodule="RealEstateUI" autoname="issuerCode" helptitle="IssuerCode">
-                            <input class="form-control HiddenAutoComplete" name="RealEstateUI_NewTransferIssuerCode" type="hidden" module="RealEstateUI" mainmodule="RealEstateUI" autonamefield="issuerCode" value="">
+                            <input class="form-control HiddenAutoComplete" name="RealEstateUI_NewTransferIssuerCode" type="hidden" module="RealEstateUI" mainmodule="RealEstateUI" autoNameField="issuerCode" value="">
                             <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                             <div class="autocomplete-items" module="RealEstateUI" mainmodule="RealEstateUI" autoname="issuerCode">
                             </div>
