--- a/displaytabs/tabs/HrRequisitionUI/NewJob.html
+++ b/displaytabs/tabs/HrRequisitionUI/NewJob.html
@@ -18,7 +18,7 @@
                 <div class="autocomplete-items" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobRecruiterCode">
                 </div>
             </div>
-            <input class="form-control HiddenAutoComplete" name="createJobRecruiterCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobRecruiterCode" autonamefield="createJobRecruiterCode" value="">
+            <input class="form-control HiddenAutoComplete" name="createJobRecruiterCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobRecruiterCode" autoNameField="createJobRecruiterCode" value="">
             <div name="createJobRecruiterCode" class="DivAutoCompleteDefault" style="margin-left: 20px; display:none" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobRecruiterCode"></div>
             <div name="createJobRecruiterCode" class="DivAutoComplete" style="margin-left: 20px; display:none" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobRecruiterCode">HR, HR</div>
         </div>
@@ -31,7 +31,7 @@
                 <div class="autocomplete-items" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobManagerCode">
                 </div>
             </div>
-            <input class="form-control HiddenAutoComplete" name="createJobManagerCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobManagerCode" autonamefield="createJobManagerCode" value="">
+            <input class="form-control HiddenAutoComplete" name="createJobManagerCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobManagerCode" autoNameField="createJobManagerCode" value="">
             <div name="createJobManagerCode" class="DivAutoCompleteDefault" style="margin-left: 20px; display:none" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobManagerCode"></div>
             <div name="createJobManagerCode" class="DivAutoComplete" style="margin-left: 20px; display:none" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="createJobManagerCode">Tirrell, Osbourne</div>
         </div>
