--- a/displaytabs/tabs/common/CommunityTaxCertificateProfile.html
+++ b/displaytabs/tabs/common/CommunityTaxCertificateProfile.html
@@ -24,7 +24,7 @@
                     <label>Issuer</label>
                     <div>
                         <input type="text" class="form-control autocomplete displayEdit editCtc" name="issuerCode" placeholder="Issuer" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autoname="issuerCode" helptitle="issuerCode" disabled="">
-                        <input class="form-control HiddenAutoComplete" name="issuerCode" type="hidden" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autonamefield="issuerCode" value="">
+                        <input class="form-control HiddenAutoComplete" name="issuerCode" type="hidden" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autoNameField="issuerCode" value="">
                         <div class="autocomplete-items" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autoname="issuerCode">
                         </div>
                     </div>
