--- a/displaytabs/tabs/common/SalesEstimateProfile.html
+++ b/displaytabs/tabs/common/SalesEstimateProfile.html
@@ -21,7 +21,7 @@
                             <label class="control-label">Customer</label>
                             <div class="input-group">
                                 <input rowIndex="1" type="text" style="width: 300px;" class="form-control autocomplete displayEdit" name="customerCode" placeholder="Customer" module="SalesOrderUI" mainmodule="SalesOrderUI" autoname="customerCode" helptitle="customerCode">
-                                <input rowIndex="1" class="form-control editEstimate HiddenAutoComplete" name="customerCode" type="hidden" module="SalesOrderUI" mainmodule="SalesOrderUI" autonamefield="customerCode" value="">
+                                <input rowIndex="1" class="form-control editEstimate HiddenAutoComplete" name="customerCode" type="hidden" module="SalesOrderUI" mainmodule="SalesOrderUI" autoNameField="customerCode" value="">
                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                 <div class="autocomplete-items" module="SalesOrderUI" mainmodule="SalesOrderUI" autoname="customerCode">
                                 </div>
@@ -48,7 +48,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="100" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="100" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="100" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
@@ -71,7 +71,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="101" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="101" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="101" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
@@ -94,7 +94,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="103" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="103" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="103" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
@@ -117,7 +117,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="104" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="104" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="104" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
@@ -140,7 +140,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="105" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="105" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="105" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
@@ -163,7 +163,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="106" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="106" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="106" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
@@ -186,7 +186,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="107" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="107" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="107" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
@@ -209,7 +209,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="108" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="108" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="108" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
@@ -232,7 +232,7 @@
                                         <div style="flex: 50%;">
                                             <div class="input-group">
                                                 <input rowIndex="109" type="text" class="form-control autocomplete displayEdit editEstimate" name="productCode" placeholder="Product Item" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode" helptitle="productCode">
-                                                <input rowIndex="109" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autonamefield="productCode" value="">
+                                                <input rowIndex="109" class="form-control HiddenAutoComplete editEstimate" name="productCode" type="hidden" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoNameField="productCode" value="">
                                                 <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                                                 <div class="autocomplete-items" module="SalesOrderItemUI" mainmodule="SalesOrderItemUI" autoname="productCode">
                                                 </div>
