--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -304,7 +304,7 @@
                     <div class="tab-pane" id="TransferTax">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabName="TransferTax" tabUrl="TransferTaxProfile"></div>
+                                <div class="DisplayTab" tabName="TransferTax" tabUrl="TransferTaxProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTabCommon" tabName="TransferTax" tabUrl="SearchTransferTax"></div>
