--- a/displaytabs/tabs/GovernmentUI/ElectricalPermitProfileMain.html
+++ b/displaytabs/tabs/GovernmentUI/ElectricalPermitProfileMain.html
@@ -28,7 +28,7 @@
         <label class="control-label">Issuer</label>
         <div class="input-group" style="display: block;">
             <input rowIndex="1" type="text" style="width: 100%;" class="form-control pull-right autocomplete displayEdit" name="issuerCode" placeholder="Issuer" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoname="issuerCode" helptitle="issuerCode" disabled="">
-            <input rowIndex="1" class="form-control editRealEstateBuildingPermit HiddenAutoComplete" name="issuerCode" type="hidden" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autonamefield="issuerCode" value="">
+            <input rowIndex="1" class="form-control editRealEstateBuildingPermit HiddenAutoComplete" name="issuerCode" type="hidden" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoNameField="issuerCode" value="">
             <div class="autocomplete-items" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoname="issuerCode">
             </div>
         </div>
