--- a/displaytabs/tabs/HrRequisitionUI/ApplicantInterviewDetail.html
+++ b/displaytabs/tabs/HrRequisitionUI/ApplicantInterviewDetail.html
@@ -23,7 +23,7 @@
                         <label class="control-label">Job Posting</label>
                         <div class="input-group">
                             <input type="text" class="form-control autocomplete displayEdit HrRequisitionUI_NewSchedule" name="HrRequisitionUI_NewScheduleJobCode" placeholder="Job Posting" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="jobCode" helptitle="JobCode">
-                            <input class="form-control HiddenAutoComplete" name="HrRequisitionUI_NewScheduleJobCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autonamefield="jobCode" value="">
+                            <input class="form-control HiddenAutoComplete" name="HrRequisitionUI_NewScheduleJobCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoNameField="jobCode" value="">
                             <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                             <div class="autocomplete-items" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="jobCode">
                             </div>
@@ -43,7 +43,7 @@
                         <label class="control-label">Look For</label>
                         <div class="input-group">
                             <input type="text" class="form-control autocomplete displayEdit HrRequisitionUI_NewSchedule" name="HrRequisitionUI_NewScheduleLookForCode" placeholder="Look For" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="lookForCode" helptitle="lookForCode">
-                            <input class="form-control HiddenAutoComplete" name="HrRequisitionUI_NewScheduleLookForCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autonamefield="lookForCode" value="">
+                            <input class="form-control HiddenAutoComplete" name="HrRequisitionUI_NewScheduleLookForCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoNameField="lookForCode" value="">
                             <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                             <div class="autocomplete-items" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="lookForCode">
                             </div>
