--- a/displaytabs/tabs/SalesOrderUI/TopSoldProduct.html
+++ b/displaytabs/tabs/SalesOrderUI/TopSoldProduct.html
@@ -32,7 +32,7 @@
                         <label class="control-label">Assessor</label>
                         <div class="input-group">
                             <input type="text" class="form-control autocomplete displayEdit RealEstateUI_NewRealEstateAssessment" name="RealEstateUI_NewRealEstateAssessmentAssessorCode" placeholder="Assessor" module="RealEstateUI" mainmodule="RealEstateUI" autoname="assessorCode" helptitle="AssessorCode">
-                            <input class="form-control HiddenAutoComplete" name="RealEstateUI_NewRealEstateAssessmentAssessorCode" type="hidden" module="RealEstateUI" mainmodule="RealEstateUI" autonamefield="assessorCode" value="">
+                            <input class="form-control HiddenAutoComplete" name="RealEstateUI_NewRealEstateAssessmentAssessorCode" type="hidden" module="RealEstateUI" mainmodule="RealEstateUI" autoNameField="assessorCode" value="">
                             <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
                             <div class="autocomplete-items" module="RealEstateUI" mainmodule="RealEstateUI" autoname="assessorCode">
                             </div>
