--- a/displaytabs/tabs/common/SearchRealEstateTax.html
+++ b/displaytabs/tabs/common/SearchRealEstateTax.html
@@ -12,6 +12,6 @@
         </div>
     </div>
 
-    <div class="box-body searchRealEstateTaxs" module="RealEstateTaxUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchRealEstateTaxes" module="RealEstateTaxUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
