In Progress - Government 360 - Real Estate Tax

--- a/displaytabs/tabs/common/RealEstateTaxProfile.html
+++ b/displaytabs/tabs/common/RealEstateTaxProfile.html
@@ -95,7 +95,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="1" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="1" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="1" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -115,7 +115,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="2" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="2" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="2" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -135,7 +135,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="3" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="3" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="3" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -155,7 +155,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="4" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="4" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="4" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -175,7 +175,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="5" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="5" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="5" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -195,7 +195,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="6" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="6" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="6" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -215,7 +215,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="7" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="7" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="7" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -235,7 +235,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="8" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="8" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="8" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -255,7 +255,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="9" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="9" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="9" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
@@ -275,7 +275,7 @@
                             </div>
                             <div style="display: flex;" class="RealEstateTaxItemRecord">
                                 <div style="flex: 10%; margin-left: 10px;">
-                                    <input rowIndex="10" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
+                                    <input disabled="" rowIndex="10" name="taxYear" module="RealEstateTaxItemUI" type="text" class="form-control calendarYear editRealEstateTax" placeholder="Year">
                                 </div>
                                 <div style="flex: 10%; margin-left: 10px;">
                                     <input rowIndex="10" name="basicAmount" module="RealEstateTaxItemUI" type="text" class="form-control editRealEstateTax" placeholder="Basic Amount">
